# iris-agent

./: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  makefile  pyproject.toml  test_graph.ipynb  test_graph.py
iris/: __main__.py  router.py
iris/clients/: directus_client.py
iris/enums/: category.py
iris/graphs/introduction/: graph.py
iris/graphs/introduction/nodes/: ask_for_clarification.py  introduction.py  should_continue.py  thank_you.py
iris/graphs/introduction/states/: customer_service_state.py
iris/graphs/product/: graph.py
iris/graphs/product/nodes/: get_products.py  process_order.py
iris/graphs/product/states/: order_state.py  product_state.py
iris/models/: order.py  product.py
iris/services/: order_service.py  product_service.py
iris/streamlit/: app.py
iris/utils/: llm.py
iris/utils/model_wrappers/: langchain_chat_models.py
